# advent_of_code

2022/01/: Makefile  main.f90  test.f90
2022/02/: Makefile  main.f90  main2.f90
2022/03/: Makefile  main.f90  main2.f90  test.f90
2022/04/: Makefile  main.f90  main2.f90
2022/04a/: Makefile  main.f90  test.f90
2022/05/: Makefile  main.f90
2023/01/: Makefile  main.f90  main2.f90  test.f90
2023/02/: Makefile  main.f90  main2.f90
2023/03/: Makefile  main-old.f90  main.f90  main_new.f90
2023/04/: main.f90  main2.f90
2023/05/: Makefile  main.f90  main2.f90
2023/06/: Makefile  main.f90  main2.f90  test.f90
2023/07/: Makefile  bubble_sort.f90  main.f90  main_new.f90  main_new2.f90  test.f90
2023/08/: Makefile  directionModule.f90  ftlHashMapStringDirectionModule.F90  least_common_multiple.f90  main.f90  main2.f90  main2_new.f90  test.f90
2023/09/: Makefile  main.f90  main2.f90
2023/10/: main.f90  main2.f90
2023/11/: Makefile  ftlDynArrayIntModule.F90  main-old.f90  main.f90  main2.f90
2023/14/: Makefile  main-ftl.f90  main.f90  main2.f90
2023/15/: Makefile  hash_mod.f90  main.f90  main2.f90  test_hash.f90
2023/16/: Makefile  main-recursive.f90
2023/17/: Makefile  main.f90
2023/18/: main.f90
2023/19/: Makefile  PartModule.f90  WorkflowModule.f90  ftlHashMapStringWorkflowModule.F90  ftlListPartModule.F90  main.f90
2023/20/: CMakeLists.txt  Makefile  ftlHashMapStringModModule.F90  hashmap.f90  main1.f90  mod_module.f90
2023/20a/: conjunction_module.f90
2024/01/: Makefile  main1.f90  main2.f90
2024/02/: Makefile  main1.f90  main2.f90  (+1 more)
(+31 files in other folders)
